# atlas-root

./: Cargo.toml  README.md
atlas-core/: Cargo.toml
atlas-core/src/: lib.rs  macros.rs
atlas-core/src/net/: client.rs  client_v2.rs  codec_json.rs  codec_rmp.rs  mod.rs  packet.rs  server.rs
atlas-core/src/net/client/: client_rpc.rs  connection.rs  mod.rs  pending.rs
atlas-core/src/net/router/: auth.rs  chat.rs  mod.rs  router_handler.rs
atlas-core/src/net/rpc/: mod.rs  packet.rs  router.rs  router_spec.rs  server.rs
atlas-core/src/net/rpc/client/: client.rs  connection.rs  mod.rs  pending.rs
atlas-gate/: Cargo.toml
atlas-gate/src/: lib.rs  main.rs
atlas-gate/src/http/: mod.rs
atlas-gate/src/ws/: mod.rs
atlas-logic/atlas-auth/: Cargo.toml
atlas-logic/atlas-auth/src/: lib.rs
atlas-logic/atlas-auth/src/handler/: auth_handler.rs
atlas-logic/atlas-auth/src/rpc/: auth_handler.rs  method.rs  mod.rs
atlas-logic/atlas-auth/src/rpc/entity/: mod.rs
atlas-logic/atlas-auth/src/rpc/handler/: auth_handler.rs
atlas-logic/atlas-blitz/: Cargo.toml
atlas-registry/: Cargo.toml
atlas-toolkit/atlas-http-client/: Cargo.toml
atlas-toolkit/atlas-http-client/src/: main.rs
atlas-toolkit/atlas-ws-client/: Cargo.toml
atlas-toolkit/atlas-ws-client/src/: cmd_context.rs  main.rs  ws_client.rs
