[workspace]
members = [
    "atlas-core",
    "atlas-gate",
    "atlas-logic/atlas-auth",
    "atlas-logic/atlas-blitz",
    "atlas-registry",
    "atlas-toolkit/atlas-http-client",
    "atlas-toolkit/atlas-ws-client"
]
resolver = "3"

[workspace.dependencies]
# local
atlas-core = { path = "atlas-core" }
atlas-auth = { path = "atlas-logic/atlas-auth" }

# runtime
tokio = "1.48"

# network
axum = "0.8"
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# common
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = "1.0"
rmp-serde = "1.3.0"
bytes = "1.11"
parking_lot = "0.12"
slab = "0.4"

# client common
reqwest = "0.12"
tokio-tungstenite = "0.28"
