[package]
name = "atlas-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0",features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rmp-serde = "1.3.0"
tokio-util = { version = "0.7.17", features = ["codec"] }
bytes = "1.11.0"
futures = "0.3.31"