[package]
name = "atlas-core"
version = "0.1.0"
edition = "2024"

[dependencies]

# runtime
tokio = { workspace = true, features = ["full"] }

# network
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }

# common
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
bytes = { workspace = true ,features = ["serde"] }
slab = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }


[features]
default = ["msgpack_codec"]
msgpack_codec = []
json_codec = []