[package]
name = "atlas-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.8", features = ["ws"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }

reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio-tungstenite = "0.28.0"

futures-util = "0.3.31"
anyhow = "1.0.100"

atlas-core = { workspace = true }
rmp-serde = "1.3.0"
bytes = "1.11.0"