[package]
name = "atlas-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
# local
atlas-core = { workspace = true }


# runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# network
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }

# common
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
rmp-serde = { workspace = true }
anyhow = { workspace = true }