[package]
name = "atlas-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
# local
atlas-core = { workspace = true ,features = ["default"]}

# runtime
tokio = { workspace = true, features = ["full"] }

# common
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
anyhow = { workspace = true }